--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@elysiajs/cors": "^1.2.0",
     "@faker-js/faker": "^9.7.0",
     "bun-sqlite-migrations": "^1.0.2",
     "elysia": "latest"
