--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,18 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@tailwindcss/vite": "^4.1.4",
+    "@tanstack/react-query": "^5.74.4",
     "@tanstack/react-router": "^1.116.0",
     "@tanstack/react-router-devtools": "^1.116.0",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.501.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.56.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
-    "tw-animate-css": "^1.2.7"
+    "tw-animate-css": "^1.2.7",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@tanstack/router-plugin": "^1.116.1",
