--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,11 @@
   "dependencies": {
     "@elysiajs/cors": "^1.2.0",
     "@faker-js/faker": "^9.7.0",
-    "bun-sqlite-migrations": "^1.0.2",
-    "elysia": "latest"
+    "@types/pg": "^8.11.13",
+    "dotenv": "^16.5.0",
+    "elysia": "latest",
+    "pg": "^8.15.5",
+    "***REMOVED***-migrations": "^5.3.0"
   },
   "devDependencies": {
     "bun-types": "latest"
