--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,12 +21,14 @@
     "@tanstack/react-query": "^5.74.4",
     "@tanstack/react-router": "^1.116.0",
     "@tanstack/react-router-devtools": "^1.116.0",
+    "@types/pg": "^8.11.13",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.501.0",
     "next-themes": "^0.4.6",
+    "pg": "^8.15.5",
     "ramda": "^0.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
