--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,6 +37,7 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
     "tw-animate-css": "^1.2.7",
+    "vite-plugin-vercel": "^9.0.5",
     "zod": "^3.24.3"
   },
   "devDependencies": {
