--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.50",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "bun run src/index.ts",
+    "build:backend": "cd backend && bun install",
+    "start:backend": "cd backend && bun src/index.ts",
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
