--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,7 @@
   "devDependencies": {
     "bun-types": "latest"
   },
-  "module": "src/index.js",
+  "module": "src/index.ts",
   "type": "module",
   "engines": {
     "bun": "latest"
