--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,8 @@
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
     "tw-animate-css": "^1.2.7",
-    "zod": "^3.24.3"
+    "zod": "^3.24.3",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@tanstack/router-plugin": "^1.116.1",
