--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,6 +57,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "^5.2.2",
     "vite": "^5.1.0"
   }
