--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,7 @@
     "dotenv": "^16.5.0",
     "elysia": "latest",
     "pg": "^8.15.5",
-    "***REMOVED***-migrations": "^5.3.0"
+    "postgres-migrations": "^5.3.0"
   },
   "devDependencies": {
     "bun-types": "latest"
