--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,13 +32,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "lucide-react": "^0.501.0",
+    "lucide-react": "^0.507.0",
     "next-themes": "^0.4.6",
     "pg": "^8.15.5",
     "ramda": "^0.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.56.0",
+    "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
